fixed text overflow in save-it modal

--- a/say-it-client/src/components/Modal.css
+++ b/say-it-client/src/components/Modal.css
@@ -139,7 +139,7 @@ h1 {
 }
 
 .save-it.modal-box .fields{
-    margin-top: 100px;
+    margin-top: 80px;
     margin-bottom:40px;
 }
 .save-it.modal-box .fields p {
